# SensESP

./: .editorconfig  CMakeLists.txt  extra_script.py  library.json  platformio.ini
logo/: SensESP_logo_symbol.afdesign
scripts/: convert_html.py
src/: sensesp_app.cpp  sensesp_app.h  sensesp_base_app.cpp
src/sensesp/net/: networking.cpp  networking.h  web_server.cpp  web_server.h  ws_client.cpp  ws_client.h
src/sensesp/net/web/: base_command_handler.h  command_handler.h  config_handler.h
src/sensesp/net/web/autogen/: web_ui_files.h
src/sensesp/sensors/: analog_reader.h  digital_input.h  sensor.h
src/sensesp/signalk/: signalk_metadata.h
src/sensesp/system/: minimal_button.h  pwm_output.cpp  resettable.h  startable.h
src/sensesp/transforms/: lambda_transform.h
src/sensesp/ui/: ui_button.h  ui_output.h
web/: package-lock.json  package.json  tsconfig.json  vite.config.ts
web/mock/: api-config.mock.ts  api-info.mock.ts  api-routes.mock.ts  api-signalk.mock.ts  config.mock.ts  info.mock.ts
web/scss/: styles.scss
web/src/: App.tsx  app_config.ts  config.ts  index.tsx
web/src/common/: configAPIClient.ts  configAPIClient.tsx
web/src/components/: App.tsx  Card.tsx  Collapse.tsx  ConfigCard.tsx  ConfigCards.tsx  Form.tsx  Header.tsx  InfoGroup.tsx  InfoGroups.tsx  InfoItem.tsx  ModalError.tsx  PageContents.tsx  PageHeading.tsx  ReForm.tsx  ReTab.tsx  SKStatusContext.tsx  SignalKSettings.tsx  Tab.tsx  WiFiSettings.tsx
web/src/components/SignalKSettings/: index.tsx
web/src/components/WiFiSettings/: index.tsx
web/src/pages/: AppPage.tsx  ModalError.tsx  PageContents.tsx  PageHeading.tsx  ReCollapse.tsx  ReCollapseCard.tsx  ReForm.tsx  Root.tsx  _404.tsx
web/src/pages/Configuration/: ConfigCard.tsx  ConfigCards.tsx  index.tsx
web/src/pages/Control/: index.tsx
web/src/pages/Network/: index.tsx
web/src/pages/SignalK/: SKStatusContext.tsx  SignalKSettings.tsx  SignalKSettingsPanel.tsx  index.tsx
web/src/pages/Status/: InfoGroup.tsx  InfoGroups.tsx  InfoItem.tsx  index.tsx
web/src/pages/System/: index.tsx
web/src/pages/WiFi/: NetworkList.tsx  SingleClientConfigPanel.tsx  WiFiSettings.tsx  WiFiSettingsConfig.ts  WiFiSettingsPanel.tsx  index.tsx
webui-plugins/sample-plugin-js/: vite.config.js
